hphp/test/zend/good/ext-mbstring/mb_ereg_replace-compat-12.php
<?php
/* (counterpart: ext/standard/tests/reg/015.phpt) */
  echo mb_ereg_replace("^","z","abc123");
?>