hphp/test/zend/bad/ext-standard-math/bug21523.php
<?php // $Id$ vim600:syn=php
set_time_limit(5);

var_dump(number_format(-2000, 2768));
echo "OK";
?>